# Open-LLM-webchat

./: .env  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: app.py  mcps_config.json  settings.py
src/assets/: custom_style.css
src/utils/: agent.py  model_dropdown.py  models.py  process_chat.py  process_knowledge.py  process_mcp.py  process_memory.py  process_session.py
